--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col">
-                            <h3 class="card-title"><span id="surnameOutput">Генерация фамилии</span></h3>
-                            <h4>Имя: <span id="firstNameOutput">Иван</span></h4>
+                            <div class="card-title fullname"><div>Фамилия:</div><span id="surnameOutput">Генерация фамилии</span></div>
+                            <div class="fullname"><div>Имя:</div><span id="firstNameOutput">Генерация имени</span></div>
+                            <div class="fullname"><div>Отчество:</div><span id="middleNameOutput">Генерация отчетсва</span></div>
                             <p>
-                                <span id="genderOutput">Генерация пола</span>
-                                <span>, </span>
-                                <span id="birthYearOutput">Генерация года рождения</span>
+                                <p>Пол: <span id="genderOutput">Генерация пола</span></p>
+                                <p>Дата рождения: <span id="birthYearOutput">Генерация года рождения</span></p>
+                                <p>Профессия: <span id="profession">Генерация профессии</span></p>
                             </p>
+                            <div class="btn-group">
+                                <button class="button" id="generate-btn">Генерация</button>
+                                <button class="button" id="clear-btn">Очистить</button>
+                            </div>
                         </div>
                     </div>
                 </div>
